--- a/school-portal/src/main/resources/templates/reset-password.html
+++ b/school-portal/src/main/resources/templates/reset-password.html
@@ -23,11 +23,7 @@
 </head>
 
 <body style="background: var(--bs-light-border-subtle);">
-    <nav class="navbar navbar-expand-md" style="background: rgba(35,191,79,0.86);border-bottom-width: 11px;border-bottom-color: var(--bs-primary);">
-        <div class="container-fluid"><a class="navbar-brand" href="#" style="font-weight: bold;color: #161a1e;">Spring School</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navcol-1"></div>
-        </div>
-    </nav>
+<div th:replace="~{fragments/navbar :: navbar}"></div>
     <section class="position-relative py-4 py-xl-5" style="min-height: 83.3vh;">
         <div class="container">
             <div class="row d-flex justify-content-center">
@@ -38,8 +34,8 @@
                                     <path d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664z"></path>
                                 </svg></div>
                             <form class="text-center" method="post">
-                                <div class="mb-3"><input class="form-control" type="password" name="email" placeholder="Email"></div>
-                                <div class="mb-3"><input class="form-control" type="password" name="password" placeholder="Password"></div>
+                                <div class="mb-3"><input class="form-control" type="password" name="firstPass" placeholder="New password"></div>
+                                <div class="mb-3"><input class="form-control" type="password" name="secondPass" placeholder="Repeat password"></div>
                                 <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit">Confirm</button></div>
                             </form>
                         </div>
