--- a/school-portal/src/main/resources/templates/course/course-info.html
+++ b/school-portal/src/main/resources/templates/course/course-info.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html data-bs-theme="light" lang="en" xmlns:th="http://www.thymeleaf.org">
+<html data-bs-theme="light" lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head>
     <meta charset="utf-8">
@@ -40,24 +40,27 @@
     <div style="display: flex;">
         <div>
             <div style="margin-bottom: 40px;">
-                <div class="d-xxl-flex align-items-xxl-end" style="display: flex;">
+                <div class="d-flex align-items-end" style="display: flex;">
                     <p style="font-size: 42px;font-family: 'Source Sans Pro', sans-serif;font-weight: bold;color: var(--bs-gray-700);">
                         Grades</p>
-                    <a class="btn btn-primary d-xxl-flex m-auto" type="button"
+                    <a class="btn btn-primary d-flex m-auto" type="button"
+                       sec:authorize="!hasAuthority('Student')"
                        th:href="@{'/add-grade/' + ${student.id} + '/' + ${course.id}}">Add grade</a>
                 </div>
-                <div th:each="grade : ${grades}" class="d-xxl-flex align-items-xxl-end"
+                <div th:each="grade : ${grades}" class="d-flex align-items-end"
                      style="display: flex;margin-bottom: 4px;">
                     <p style="font-size: 24px;font-family: 'Source Sans Pro', sans-serif;font-weight: bold;"
                        th:text="${grade.grade}"></p>
-                    <p class="d-xxl-flex align-items-xxl-center"
-                       style="font-size: 24px;font-family: 'Source Sans Pro', sans-serif;">&nbsp;on <span
+                    <p class="d-flex align-items-center"
+                       style="font-size: 24px;font-family: 'Source Sans Pro', sans-serif;">&nbsp;on&nbsp;<span
                             th:text="${#temporals.format(grade.dateAssigned, 'dd/MM/yyyy')}"></span></p>
                     <div class="my-auto" style="display: flex;margin-left: 10px;">
                         <a class="btn btnMaterial btn-flat success semicircle" role="button"
+                           sec:authorize="!hasAuthority('Student')"
                            th:href="@{'/edit-grade/' + ${student.id} + '/' + ${course.id} + '/' + ${grade.id}}"><i
                                 class="fas fa-pen"></i></a>
                         <form th:action="@{'/delete-grade/' + ${student.id} + '/' + ${course.id} + '/' + ${grade.id}}"
+                              sec:authorize="hasAuthority('Admin')"
                               method="post" onsubmit="return confirm('Are you sure you want to delete this grade?');"
                               style="display:inline;">
                             <button type="submit" class="btn btnMaterial btn-flat accent btnNoBorders checkboxHover">
@@ -70,7 +73,7 @@
             <div style="margin-bottom: 40px;">
                 <p style="font-size: 42px;font-family: 'Source Sans Pro', sans-serif;font-weight: bold;color: var(--bs-gray-700);">
                     Average grade</p>
-                <div class="d-xxl-flex align-items-xxl-end" style="display: flex;">
+                <div class="d-flex align-items-end" style="display: flex;">
                     <p style="font-size: 36px;font-family: 'Source Sans Pro', sans-serif;font-weight: bold;"
                        th:text="${avgGrade}"></p>
                 </div>
@@ -78,10 +81,11 @@
         </div>
         <div class="ms-auto" style="min-width: 480px;">
             <div style="margin-bottom: 40px;">
-                <div class="d-xxl-flex align-items-xxl-end" style="display: flex;">
+                <div class="d-flex align-items-end" style="display: flex;">
                     <p style="font-size: 42px;font-family: 'Source Sans Pro', sans-serif;font-weight: bold;color: var(--bs-gray-700);">
                         Unexcused absences</p>
-                    <button class="btn btn-primary d-xxl-flex m-auto" type="button" data-bs-toggle="modal"
+                    <button class="btn btn-primary d-flex m-auto" type="button" data-bs-toggle="modal" style="margin-left: 36px !important;"
+                            sec:authorize="!hasAuthority('Student')"
                             data-bs-target="#addAbsenceModal">Add absence
                     </button>
                     <div class="modal fade" id="addAbsenceModal" tabindex="-1" aria-labelledby="addAbsenceModalLabel"
@@ -121,7 +125,8 @@
                 <div th:each="absence : ${absences}" style="display: flex;">
                     <p style="font-size: 20px;font-family: 'Source Sans Pro', sans-serif;"
                        th:text="${#temporals.format(absence.absenceDate, 'dd/MM/yyyy')}"></p>
-                    <form th:action="@{'/excuse-absence/' + ${absence.id}}" method="post" style="margin-left: 13px;">
+                    <form th:action="@{'/excuse-absence/' + ${absence.id}}" method="post" style="margin-left: 13px;"
+                          sec:authorize="!hasAuthority('Student')">
                         <input type="hidden" name="studentId" th:value="${student.id}">
                         <input type="hidden" name="courseId" th:value="${course.id}">
                         <button class="btn btn-primary d-flex justify-content-center align-items-center"
@@ -136,10 +141,10 @@
 <footer class="text-center py-4" style="background: rgba(35,191,79,0.86);margin-top: auto;">
     <div class="container">
         <div class="row row-cols-1 row-cols-lg-3">
-            <div class="col d-xxl-flex justify-content-xxl-center align-items-xxl-center">
+            <div class="col d-flex justify-content-center align-items-center">
                 <p class="text-muted my-2">Copyright&nbsp;© 2025 Spring School</p>
             </div>
-            <div class="col d-xxl-flex justify-content-xxl-center align-items-xxl-center">
+            <div class="col d-flex justify-content-center align-items-center">
                 <ul class="list-inline my-2">
                     <li class="list-inline-item me-4">
                         <div class="bs-icon-circle bs-icon-primary bs-icon">
@@ -159,7 +164,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col d-xxl-flex justify-content-xxl-center align-items-xxl-center">
+            <div class="col d-flex justify-content-center align-items-center">
                 <ul class="list-inline my-2">
                     <li class="list-inline-item"><a class="link-secondary" href="#">Privacy Policy</a></li>
                     <li class="list-inline-item"><a class="link-secondary" href="#">Terms of Use</a></li>
