--- a/school-portal/src/main/resources/templates/class/class-students.html
+++ b/school-portal/src/main/resources/templates/class/class-students.html
@@ -62,7 +62,9 @@
                             <td th:text="${unexcusedAbsences[student.id]}">Unexcused Absences</td>
                             <td class="text-center align-middle" style="max-height: 60px;height: 60px;">
                                 <a class="btn btnMaterial btn-flat primary semicircle" role="button"
-                                   th:href="@{'/admin/student/' + ${student.id}}"><i class="far fa-eye"></i></a> <!-- TODO add href for teacher -->
+                                   th:with="url=${#authorization.expression('hasAuthority(''Admin'')') ? '/admin/student/' + student.id : '/teacher/student/' + student.id}"
+                                   th:href="@{${url}}"
+                                   sec:authorize="hasAnyAuthority('Admin', 'Teacher')"><i class="far fa-eye"></i></a>
                                 <a class="btn btnMaterial btn-flat success semicircle" role="button"
                                    sec:authorize="hasAuthority('Admin')"
                                    th:href="@{'/admin/edit-student/' + ${student.id}}"><i class="fas fa-pen"></i></a>
