--- a/school-portal/src/main/resources/templates/class/class-students.html
+++ b/school-portal/src/main/resources/templates/class/class-students.html
@@ -62,7 +62,7 @@
                             <td th:text="${unexcusedAbsences[student.id]}">Unexcused Absences</td>
                             <td class="text-center align-middle" style="max-height: 60px;height: 60px;">
                                 <a class="btn btnMaterial btn-flat primary semicircle" role="button"
-                                   th:with="url=${#authorization.expression('hasAuthority(''Admin'')') ? '/admin/student/' + student.id : '/teacher/student/' + student.id}"
+                                   th:with="url=${#authorization.expression('hasAuthority(''Admin'')') ? '/admin/student/' + student.id : '/teacher/student/' + student.id + '/course/' + classCourse.course.id}"
                                    th:href="@{${url}}"
                                    sec:authorize="hasAnyAuthority('Admin', 'Teacher')"><i class="far fa-eye"></i></a>
                                 <a class="btn btnMaterial btn-flat success semicircle" role="button"
